EXTRA_DIST = glame-logo.jpg default.png \
	mix1.png drop.png dup.png null.png one2n.png \
	input.png output.png \
	prod.png sum.png invert.png fft.png \
	const.png rect.png sine.png \
	delay.png extend.png repeat.png \
	volume_adjust.png equalizer.png \
	ping.png pipe.png fade.png pulse.png \
	statistics.png zoom_in.png zoom_out.png \
	play.png save.png pan.png bandpass.png \
	extend.png echo.png iir.png noisegate.png \
	resample.png flanger.png

pkgpixmaps_DATA = glame-logo.jpg default.png \
	mix1.png drop.png dup.png null.png one2n.png \
	input.png output.png \
	prod.png sum.png invert.png fft.png \
	const.png rect.png sine.png \
	delay.png extend.png repeat.png \
	volume_adjust.png equalizer.png \
	ping.png pipe.png fade.png pulse.png \
	statistics.png zoom_in.png zoom_out.png \
	play.png save.png pan.png bandpass.png \
	extend.png echo.png iir.png noisegate.png \
	resample.png flanger.png
